# libmodbus

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/: CMakeLists.txt  modbus.h
src/win32/: configure.js  modbus.vcproj
